# dbhydro-py

./: .gitignore  README.md  TESTING.md  pyproject.toml
dbhydro_py/: __init__.py  api.py  exceptions.py  utils.py
dbhydro_py/models/: __init__.py
dbhydro_py/models/responses/: __init__.py  aggregate.py  base.py  interpolate.py  point.py  synchronize.py  time_series.py
dbhydro_py/models/transport/: __init__.py  result.py
dbhydro_py/rest_adapters/: __init__.py  rest_adapter_base.py  rest_adapter_requests.py
tests/: __init__.py  conftest.py  test_api.py  test_api_aggregate.py  test_api_daily_data.py  test_api_interpolate.py  test_api_nexrad.py  test_api_por.py  test_api_realtime.py  test_api_synchronize.py  test_api_time_series.py  test_api_tsarithmetic.py  test_api_water_quality.py  test_summary_field.py  test_utils.py
tests/test_models/: __init__.py  test_aggregate.py  test_interpolate.py  test_point.py  test_synchronize.py  test_time_series.py
tests/test_rest_adapters/: __init__.py  test_requests_rest_adapter.py
